# -Google-AI-Mode-Direct-Scraper

./: .gitignore  README.md  pyproject.toml  run_scraper.py
src/google_ai_scraper/: main.py
src/google_ai_scraper/core/: browser.py  parsing.py  scraper.py
src/google_ai_scraper/utils/: display.py  storage.py
